# Vehicle-Classifying-and-Counting-Convolution-Neural-Networks-Onboard-Cost-Efficient-Microcontrollers

./: .gitignore  readme.md
Dataset/: esc50.csv  groundtruth_weak_label_training_set.csv  parser.py
LibrosaCpp/: Makefile  README.md  testCompiled
LibrosaCpp/librosa/: librosa.h
LibrosaCpp/test/: make-mfcc.cpp  make-mfcc.h  mfccTest.cpp  test.cc  testOG.cpp
Model/: 189_kb_model.tflite  40k.tflite  475_kb_model.cpp  60k.cpp  802_kb_model.cpp  802_kb_model.tflite  80k.tflite  cnn.cpp  cnn.tflite  cnn1.cpp  cnn1.tflite  fina4.cpp  fina4.tflite  final copy 2.ipynb  final copy 3.ipynb  final copy 4.ipynb  final copy.ipynb  final.cpp  final.ipynb  final.tflite  final2.cpp  final2.tflite  final3.cpp  final3.ipynb  final3.tflite  final_more_training.cpp  final_more_training.tflite  model_0.ipynb  model_0.tflite  model_1 copy.ipynb  model_1.ipynb  model_2 copy 3.ipynb  model_2.ipynb
Model/mini/: model_0.ipynb  pipeline_int8_model_data.cpp  (+3 more)
Tools/: test_audio_sender copy.ipynb  test_audio_sender.ipynb  test_frame_sender.ipynb  w_mcu_maker.sh
dataset-converter/: Makefile  RemoveComma.py  audio-processing.cc  audio-processing.h  dataset-converter  dataset-converter.cc  make-mfcc.cpp  make-mfcc.h  notes.txt  output_frames.csv  thread_pool.h  tmp.ipynb  wavreader.c
dataset-generator/: dataset-generator  main  main.cc
micro/: CMakeLists.txt
micro/examples/pipeline/: CMakeLists.txt  audio-processing.cc  audio-processing.h  constants.cpp  constants.h  main.cpp  main_functions.cpp  main_functions.h  make-mfcc.cpp  make-mfcc.h  pipeline_float_model_data.cpp  pipeline_float_model_data.h  pipeline_int8_model_data.cpp  pipeline_int8_model_data.h  pipeline_test.cpp
micro/examples/pipeline/librosa/: librosa.h
pico/: pico.c
(+97 files in other folders)
